dev/test_programs/INVALID/group12/weed_errors/cont_error.go
// continue can only appear in a loop

package main;

func main() {
	print()
	continue
}